

  30 Jan 2015; Justin Lecher <jlec@gentoo.org> -lh-sources-3.18.3.ebuild,
  +lh-sources-3.18.4.ebuild:
  Bump to latest aufs3, genpatches and linux release; drop old

  25 Jan 2015; Justin Lecher <jlec@gentoo.org> lh-sources-3.18.3.ebuild:
  Bump to latest aufs3

  25 Jan 2015; Justin Lecher <jlec@gentoo.org> lh-sources-3.18.3.ebuild:
  Bump to latest aufs3

  18 Jan 2015; Justin Lecher <jlec@gentoo.org> lh-sources-3.18.3.ebuild:
  Bump to latest aufs3

  18 Jan 2015; Justin Lecher <jlec@gentoo.org> -lh-sources-3.18.2.ebuild,
  +lh-sources-3.18.3.ebuild:
  Bump to latest genpatches and linux release

  09 Jan 2015; Justin Lecher <jlec@gentoo.org> -lh-sources-3.18.1.ebuild,
  +lh-sources-3.18.2.ebuild:
  Bump to latest genpatches and linux release

  08 Jan 2015; Justin Lecher <jlec@gentoo.org> lh-sources-3.18.1.ebuild:
  Bump to latest aufs3

  06 Jan 2015; Justin Lecher <jlec@gentoo.org> lh-sources-3.18.1.ebuild:
  Bump to latest aufs3

  05 Jan 2015; Justin Lecher <jlec@gentoo.org> lh-sources-3.18.1.ebuild:
  Bump to latest aufs3

  05 Jan 2015; Justin Lecher <jlec@gentoo.org> lh-sources-3.18.1.ebuild:
  Bump to latest aufs3

  22 Dec 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.18.1.ebuild:
  Bump BFQ patch

  17 Dec 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.17.6.ebuild,
  lh-sources-3.18.1.ebuild, -files/lh-sources-3.16-armv6.patch,
  -files/lh-sources-3.17-armv6.patch, -files/lh-sources-3.18-armv6.patch:
  Drop arm patches

  17 Dec 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.18.0.ebuild,
  +lh-sources-3.18.1.ebuild:
  Bump to latest aufs3, genpatches and linux release

*lh-sources-3.18.0 (15 Dec 2014)

  15 Dec 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.18.0.ebuild,
  +files/lh-sources-3.18-armv6.patch:
  Bump to latest aufs3, genpatches and linux release

  10 Dec 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.17.4.ebuild,
  +lh-sources-3.17.6.ebuild:
  Bump to latest genpatches and linux release; drop old
