@@ -7,6 +7,8 @@ DIST deblob-3.18 127087 SHA256 c720eabb3911f8dfa4398c4250853df4633018abebc01a509
 DIST deblob-check-3.18 654232 SHA256 30f22602b6ddf2cbccc16ef25fdc4d92755f3972e1c671d7cab8b9d6865eb155 SHA512 2cff9abef479a55dd6a0699371be8227ba63b18da1fb153d5df382e0a5e4f1b745b7de256a367a36efa9d12e2aad5622cc288efef009feebf81c108dbef4fe16 WHIRLPOOL e92927ad1565e80ce87e8bda372f8f7eb42bc0f47ad9b19fe5cf737903b2021fd6e3756e8d22b70f3037a46c254fec8b7285b37beb10795ccb4ca99d38876f8c
 DIST genpatches-3.18-6.base.tar.xz 142108 SHA256 89885e46acbe555c796ada1bcf0338e846e3723c41b04c936013f9f51d1b5714 SHA512 8d04897eb6f68c72888eb2d4028f33d38d094b94bff6bfcef172e3787a8bfa938173805814e88d03ff6b405a3efb9312b030100e1bc526cabf36ea839e6a2be0 WHIRLPOOL 3da3b28546ecd942f619ffd7cc35407ed6fe25fca7165e7c06318647ec1bda24a1107d4369284ce9dac0a6606e0c6f0869e00e1bfbfe610e663fa49ad43d587f
 DIST genpatches-3.18-6.extras.tar.xz 16188 SHA256 6bc6055db0c1d49e358c067207f4ba0bd718734124cd92b60bc5e9f85f3b0f9c SHA512 2f3051ca496c05b12a544cec3345a3d25d79bcf9bc9d6f43c75a33901f0767d2e8e92d4e9132f7003548863a4d6ba3b051b4aa65f58edf8fecf0322fc98fa2ed WHIRLPOOL 6f2151b3d559eb87748c78ed4714c76e95b4aad2dbc7ea6b9b88940f04bcf45b7728036cd3e990ae8807bf667435f90c0925edb3a34e2e48f3814ddde0889c0c
+DIST genpatches-3.18-7.base.tar.xz 170184 SHA256 1a70a5d177cd1f922533bfa1ddd16805c19de02732e5461b4264bf30ad971fcc SHA512 8dcc85c848003f47db669a01c6940f798ded94fa0bed62499c9c0b069c9930c11323775ba04a70a28c4e7aa2da84973fa6b7ac0f8b3ae219c912ca15ec81e4d8 WHIRLPOOL 09da170bdc7478d47d6f887cd8db778db228ef625bd1d46e3f2f5a233a0ce7348e378e5ebf1a09bbe77651527b0f7222021959be5253461603ac7447570f829b
+DIST genpatches-3.18-7.extras.tar.xz 16176 SHA256 c52430ce29e02155f4da54a3382546589c68006e09a72e22cdb5efa8bfdebb1e SHA512 b60ad9ddc0e5dcb2f2aef8e2e96452e7dace094823d54b8523ce11351e30ac22789fd7b160a372b1bbf2e428ae7e6b83488505a404e001893e2ca56c1e995fb4 WHIRLPOOL 99f400fa7039d35a27440fedac38affc4e5beed0e1abf86aa3f22dfc2f628c72af566bac89b3afd214977485578939ac5b430c9258c447c5918e56b6501e0ea4
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-da192988c7cb69709bb70f74f576f1479dce0e1d.patch 16381 SHA256 65118fccbba51186bd5904c2f3439e4dafbdebf3b638b2338abcf69a3bda1333 SHA512 66043a3cd267be5209c382b6aa9c9cf995d5499e8873546794042fbf17bacf577f9b4ab010fd3f20c629f40613c89b3e3d49536e7717b4a6e380c01547c39f41 WHIRLPOOL c43d99483c02fb5b193769f0a7a6ce9a868b12aad29fc1382b4d3c72cb4cb5baefa98929d5d9fb7d5e1524f5b6e75f5330ed039a15391a7a54e7b7053c3847a1
 DIST linux-3.18.tar.xz 80934708 SHA256 becc413cc9e6d7f5cc52a3ce66d65c3725bc1d1cc1001f4ce6c32b69eb188cbd SHA512 2f0b72466e9bc538a675738aa416573d41bbbd7e3e2ffd5b5b127afde609ebc278cec5a3c37e73479607e957c13f1b4ed9782a3795e0dcc2cf8e550228594009 WHIRLPOOL 81634af631b7d30ccd1f4798f96f44d9aa0ba6609b73f2747eb6aebaf7a99487fb2dbd45767605186182533cb222bfd9236e8dd5e11a04fdb67c211e4e0a91d6
